# ideabase

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-run.sh  LICENSE  README-rag.md  README-restful.md  README.md
.cargo/: config.toml
.doc/: demo.sql
.docker/: Docker-compose.yaml
.run/: Docker-compose.sh  Docker-compose.yaml  Docker-run-env.properties
.run/.json-demo/: vector.json
.run/.sql-demo/: init.sql.sql
.run/.sql-schema/: ideabase.sql
ai-rag/: Cargo.toml
ai-rag/src/: common.rs  lib.rs  source_data_loader.rs
ai-rag/src/core/: chain.rs  llm.rs  mod.rs  vector.rs  vector_data_etl.rs  vector_doc.rs
ai-rag/src/handler/: conversation_handler.rs  etl_handler.rs  mod.rs  retriever_handler.rs  vectorize_handler.rs
auth/: Cargo.toml
common/core/: Cargo.toml
common/core/src/: date.rs  json.rs  lib.rs  passwd.rs  rpc.rs  utils.rs  yaml.rs
common/database/: Cargo.toml
common/database/src/: common.rs  core.rs  lib.rs
common/src/: log.rs  rpc.rs  yaml.rs
file-storage/: Cargo.toml
rag/: Cargo.toml
realtime/: Cargo.toml
realtime/src/: lib.rs  mysql_binlog_listener.rs
restful/: Cargo.toml
restful/src/: lib.rs
restful/src/db/: create_executor.rs  datasource.rs  mod.rs  query_context.rs  query_executor.rs
restful/src/db/context/: query.rs
restful/src/db/executor/: create_executor.rs  mod.rs  query_executor.rs
restful/src/handler/: delete.rs  get.rs  head.rs  mod.rs  post.rs  put.rs
restful/src/utils/: hashmap.rs  transform.rs
src/: main.rs
src/controller/: account_controller.rs  ai_rag_controller.rs  mod.rs  rest_controller.rs
src/controllers/: account_controller.rs  ai_rag_controller.rs  mod.rs  rag_controller.rs  rest_controller.rs  restful_controller.rs
src/global/: jwt.rs
src/service/model/: account.rs
storage/: Cargo.toml
yaml/: application-dev.yaml  application.yaml  vector-config.json
