[package]
name = "ideabase"
version = "0.1.0"
edition = "2024"
description = "BaaS powered by AI, 兼具安全与性能的国产Firebase！"
authors = [
    "ReliefZk <reliefzk@gmail.com>",
]
keywords = ["baas", "ai-baas", "ai-rag", "firebase", "supabase"]

[workspace]
members = ["common/core", "common/database", "restful", "realtime", "file-storage"]
resolver = "2"

[dependencies]
common = { path = "common/core" }
database = { path = "common/database" }
rag = { path = "ai-rag" }
restful = { path = "restful" }
realtime = { path = "realtime" }
storage = { path = "file-storage" }

log = {  version = "0.4" }
regex = { version = "1" }
lazy_static = { version = "1"}
once_cell = { version = "1.21" }
jsonwebtoken = { version = "9" }

# json
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# web
http = { version = "0.2" }
actix-cors = { version = "0.7" }
actix-web = { version = "4.10" }

# sqlx
sqlx = { version = "0.8", features = ["mysql"] }

# nio
tokio = { version = "1.44", features = ["full"]}