[package]
name = "rag"
version = "1.0.0"
edition = "2024"
description = "ideabase ai rag, auto build database as a rag service"


[dependencies]
common = { path = "../common/core" }
database = { path = "../common/database" }

log = {  version = "0.4" }
lazy_static = { version = "1"}
chrono = { version = "0.4", features=["serde"] }
futures-util = { version = "0.3" }
async-trait = {  version = "0.1" }

# hashmap
fnv = { version = "1.0" }

# json
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# rag
langchain-rust = { version = "4.6", features = ["sqlx", "qdrant"] }