[package]
name = "rag"
version = "0.1.0"
edition = "2024"
description = "ideabase ai rag, auto build database as a rag service"


[dependencies]
common = { path = "../common/core" }
database = { path = "../common/database" }

log = {  version = "0.4" }
regex = { version = "1" }
serde_json = { version = "1.0" }
once_cell = { version = "1.21" }

# rag
langchain-rust = { version = "4.6", features = ["sqlx", "qdrant"] }

#[dev-dependencies]
tokio-test = "0.4.4"
