[package]
name = "restful"
version = "0.1.0"
edition = "2024"
description = "ideabase restful api"


[dependencies]
common = { path = "../common/core" }
database = { path = "../common/database" }

log = {  version = "0.4" }
fnv = { version = "1.0" }
serde_json = { version = "1.0" }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "chrono", "mysql", "rust_decimal"] }