[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "ideabase common module"


[dependencies]
log = {  version = "0.4" }
tklog = { version = "0.2" }
lazy_static = { version = "1"}
figment = { version = "0.10", features = ["yaml"] }

# uuid
rustflake = { version = "0.1" }

# json
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# codec
base64 = {  version = "0.22" }

[dev-dependencies]
tokio-test = "0.4"
