[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "ideabase common module"

[dependencies]
log = {  version = "0.4" }
tklog = { version = "0.2" }
lazy_static = { version = "1"}
uuid7 = { version = "1.1" }
http = { version = "0.2" }
rustflake = { version = "0.1" }
chrono = { version = "0.4", features=["serde"] }

figment = { version = "0.10", features = ["yaml"] }
argon2 = { version = "0.5", default-features = false, features = ["std", "alloc", "password-hash", "rand"] }

# json
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# codec
base64 = {  version = "0.22" }
