[package]
name = "database"
version = "0.1.0"
edition = "2024"
description = "ideabase common database module"


[dependencies]
common = { path = "../core" }

log = {  version = "0.4" }
lazy_static = { version = "1"}
chrono = { version = "0.4", features=["serde"] }

# hashmap
fnv = { version = "1.0" }

# json
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }

# database
sqlx = { version = "0.8", features = ["mysql"] }
# sea-orm = { version = "1.1", features = [ "runtime-async-std-native-tls", "sqlx-mysql", "chrono", "rust_decimal", "debug-print"]  }

[dev-dependencies]
tokio-test = "0.4"
